# g2o_tutorial

./: CMakeLists.txt  Dockerfile  docker-notes.md  readme.md
src/: circle_fit.cpp  simple_optimize.cpp
